# vcc_project_carbon_aware_vm_migration

./: .env.example  .gitignore  README.md  api.py  dashboard.html  database.py  decision_engine.py  drl_decision_engine.py  drl_environment.py  drl_train.py  fetch_history.py  gcp_migration.py  main.py  migration_cost_estimator.py  migration_engine.py  migration_report.html  migration_report_live.html  migration_report_simulated.html  orchestrator.py  orchestrator_loop.py  pyproject.toml  pyproject.toml.bak  report_generator.py  resource.py  run.sh  simulation.py  sla_classifier.py  train_tcn.py
config/: settings.py
data/: calm_sla.db
data/carbon_history/: DE.csv  DK-DK1.csv  SE.csv  US-AK.csv
data/models/: drl_agent_stats.json  tcn_DE.pt  tcn_DK-DK1.pt  tcn_SE.pt  tcn_US-AK.pt  tcn_stats.json
services/: __init__.py  carbon_forecaster.py  carbon_service.py
simulation/: vm_simulator.py
tests/: test_calm_sla.py
